--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/teampro
 spring.datasource.username=developer
 spring.datasource.password=password
+spring.jpa.show-sql: true
