--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/teampro
 spring.datasource.username=developer
 spring.datasource.password=password
 spring.jpa.show-sql: true
+
+spring.jackson.serialization.fail-on-empty-beans=false
